examples/showcase/golden/render-before/target-prod/kubernetes/ciam/networkpolicies.yaml
# Generated by opsdir from env=prod,cloud=target,ou=environments,dc=ciam-ops
# Network policies from the products' listeners
# Do not edit. Change the operations directory (under an approved change) and re-render.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: ciam
spec:
  podSelector: {}
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: am-ingress
  namespace: ciam
spec:
  podSelector:
    matchLabels:
      opsdir.io/role: am
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - port: 8080
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: idm-ingress
  namespace: ciam
spec:
  podSelector:
    matchLabels:
      opsdir.io/role: idm
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - port: 8080
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ig-ingress
  namespace: ciam
spec:
  podSelector:
    matchLabels:
      opsdir.io/role: ig
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - port: 8080
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pf-admin-ingress
  namespace: ciam
spec:
  podSelector:
    matchLabels:
      opsdir.io/role: pf-admin
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - port: 9999
      protocol: TCP
  - from:
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          opsdir.io/role: pf-admin
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          opsdir.io/role: pf-engine
    ports:
    - port: 7600
      protocol: TCP
  - from:
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          opsdir.io/role: pf-admin
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          opsdir.io/role: pf-engine
    ports:
    - port: 7700
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pf-engine-ingress
  namespace: ciam
spec:
  podSelector:
    matchLabels:
      opsdir.io/role: pf-engine
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - port: 9031
      protocol: TCP
  - from:
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          opsdir.io/role: pf-engine
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          opsdir.io/role: pf-admin
    ports:
    - port: 7600
      protocol: TCP
  - from:
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          opsdir.io/role: pf-engine
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          opsdir.io/role: pf-admin
    ports:
    - port: 7700
      protocol: TCP
